feat: limited inventory messaging on product pages
Adds new feature for limited inventory messages with settings for inventory thresholds, and the specific messages, along with color settings.

--- a/source/settings.json
+++ b/source/settings.json
@@ -51,6 +51,7 @@
               "product_status_background_color": "#1C4D12",
               "product_status_text_color_secondary": "#FFFFFF",
               "product_status_background_color_secondary": "#9A9A9A",
+              "inventory_status_text_color": "#E15C2A"
             }
           },
           {
@@ -73,6 +74,7 @@
               "product_status_background_color": "#203BE1",
               "product_status_text_color_secondary": "#FFFFFF",
               "product_status_background_color_secondary": "#9A9A9A",
+              "inventory_status_text_color": "#203BE1"
             }
           },
           {
@@ -95,6 +97,7 @@
               "product_status_background_color": "#374DCA",
               "product_status_text_color_secondary": "#FFFFFF",
               "product_status_background_color_secondary": "#9A9A9A",
+              "inventory_status_text_color": "#F39C12"
             }
           }
         ]
@@ -121,7 +124,8 @@
               "product_status_text_color": "#F8F8F8",
               "product_status_background_color": "#E15C2A",
               "product_status_text_color_secondary": "#FFFFFF",
-              "welcome_header_text_color": "#F8F8F8"
+              "product_status_background_color_secondary": "#9A9A9A",
+              "inventory_status_text_color": "#E15C2A"
             }
           },
           {
@@ -143,7 +147,8 @@
               "product_status_text_color": "#FFFFFF",
               "product_status_background_color": "#9D3A3E",
               "product_status_text_color_secondary": "#FFFFFF",
-              "welcome_header_text_color": "#0F1B27"
+              "product_status_background_color_secondary": "#9A9A9A",
+              "inventory_status_text_color": "#9D3A3E"
             }
           },
           {
@@ -166,6 +171,7 @@
               "product_status_background_color": "#E67E22",
               "product_status_text_color_secondary": "#FFFFFF",
               "product_status_background_color_secondary": "#9A9A9A",
+              "inventory_status_text_color": "#E67E22"
             }
           }
         ]
@@ -193,6 +199,7 @@
               "product_status_background_color": "#243588",
               "product_status_text_color_secondary": "#FFFFFF",
               "product_status_background_color_secondary": "#9A9A9A",
+              "inventory_status_text_color": "#A531C8"
             }
           },
           {
@@ -215,6 +222,7 @@
               "product_status_background_color": "#F90081",
               "product_status_text_color_secondary": "#FFFFFF",
               "product_status_background_color_secondary": "#9A9A9A",
+              "inventory_status_text_color": "#39B5DD"
             }
           },
           {
@@ -237,6 +245,7 @@
               "product_status_background_color": "#F46262",
               "product_status_text_color_secondary": "#FFFFFF",
               "product_status_background_color_secondary": "#9A9A9A",
+              "inventory_status_text_color": "#BF360C"
             }
           }
         ]
@@ -321,6 +330,10 @@
       "label": "Product status background (secondary)",
       "default": "#9A9A9A"
     },
+    {
+      "variable": "inventory_status_text_color",
+      "label": "Inventory status",
+      "default": "#E15C2A"
     }
   ],
   "options": [
@@ -550,6 +563,54 @@
       ],
       "default": "4px",
       "description": "Controls the rounded corner style on images and other site elements"
+    },
+    {
+      "variable": "show_low_inventory_messages",
+      "label": "Show product stock alerts",
+      "type": "boolean",
+      "default": true,
+      "description": "Show shoppers alerts on Product pages when it's running low on stock",
+      "requires": [
+        "inventory"
+      ]
+    },
+    {
+      "variable": "low_inventory_threshold",
+      "label": "Low stock alert",
+      "options": "1..100",
+      "type": "select",
+      "default": "10",
+      "description": "When stock drops below this number, shoppers will see low stock message. 'Almost sold out' message shows at half this amount",
+      "requires": [
+        "inventory",
+        "show_low_inventory_messages eq true"
+      ]
+    },
+    {
+      "variable": "low_inventory_message",
+      "label": "Low stock message",
+      "type": "text",
+      "max_length": 50,
+      "description": "Message shown when stock drops below your alert level",
+      "default": "Limited quantities available",
+      "requires": [
+        "inventory",
+        "show_low_inventory_messages eq true"
+      ]
+    },
+    {
+      "variable": "almost_sold_out_message",
+      "label": "Almost sold out message",
+      "type": "text",
+      "max_length": 50,
+      "description": "Message shown when stock drops below half your alert level",
+      "default": "Only a few left!",
+      "requires": [
+        "inventory",
+        "show_low_inventory_messages eq true",
+        "low_inventory_threshold gt 1"
+        
+      ]
     },
     {
       "variable": "show_categories_in_footer",
