--- a/source/settings.json
+++ b/source/settings.json
@@ -567,14 +567,14 @@
       "label": "Welcome overlay opacity",
       "type": "select",
       "options": [
-        ["Brightest", "-0.50"],
-        ["Brighter", "-0.25"],
-        ["None", "0"],
-        ["Darker", "0.25"],
-        ["Darkest", "0.50"]
+        ["Very bright", "very_bright"],
+        ["Bright", "bright"],
+        ["None", "none"],
+        ["Dark", "dark"],
+        ["Very dark", "very_dark"]
       ],
       "default": "0",
-      "description": "Adjust the home page slideshow or welcome image to enhance the legibility of your hero text and button"
+      "description": "Adjust the homepage slideshow or welcome image to enhance the legibility of your hero text and button"
     },
     {
       "variable": "featured_header",
