fix: improve logo sizing flexibility
Standardize logo scaling approach for better handling of varied aspect ratios.
Images now scale proportionally in both height and width while respecting
user settings. Add responsive scaling with minimum size guarantees using
clamp() to ensure logos remain visible at all screen sizes. Fix inconsistent
selectors and improve HTML/CSS coordination for more predictable behavior.

--- a/source/settings.json
+++ b/source/settings.json
@@ -512,7 +512,7 @@
     },
     {
       "variable": "logo_image_height",
-      "label": "Logo image height",
+      "label": "Logo image size",
       "type": "select",
       "options": [
         ["Small", "80"],
@@ -522,7 +522,7 @@
         ["XX Large", "160"]
       ],
       "default": "100",
-      "description": "Controls the maximum height of your logo"
+      "description": "Controls the maximum size of your logo"
     },
     {
       "variable": "nav_items",
