--- a/source/settings.json
+++ b/source/settings.json
@@ -573,7 +573,7 @@
         ["Dark", "dark"],
         ["Very dark", "very_dark"]
       ],
-      "default": "0",
+      "default": "none",
       "description": "Adjust the homepage slideshow or welcome image to enhance the legibility of your hero text and button"
     },
     {
