--- a/source/settings.json
+++ b/source/settings.json
@@ -493,6 +493,7 @@
     {
       "variable": "announcement_message_text",
       "label": "Announcement text",
+      "max_length": 500,
       "type": "text",
       "description": "Displays an announcement message on the top of every page"
     },
@@ -500,6 +501,7 @@
       "variable": "maintenance_message",
       "label": "Maintenance mode message",
       "type": "text",
+      "max_length": 2048,
       "description": "A message visitors see when your shop is in Maintenance Mode",
       "default": "We're working on our shop right now.<br /><br />Please check back soon."
     },
