--- a/source/settings.json
+++ b/source/settings.json
@@ -6,7 +6,7 @@
       "variable": "logo",
       "label": "Logo",
       "section": "global_navigation",
-      "description": "Recommend transparent background at least 320px high"
+      "description": "Recommend a rectangular image with a transparent background with minimum size of 900x300"
     },
     {
       "variable": "welcome_image",
