--- a/source/settings.json
+++ b/source/settings.json
@@ -594,6 +594,18 @@
       "description": "Displays the secondary product image when hovering over thumbnails in Product grids"
     },
     {
+      "variable": "hide_big_cartel_credit",
+      "label": "Hide Big Cartel logo in menus",
+      "section": "global_navigation",
+      "type": "boolean",
+      "default": false,
+      "description": "Choose whether to display the Big Cartel logo in your shop footer and menus",
+      "requires_upsell": {
+        "unless": "feature:theme_hide_big_cartel_credit_eligible",
+        "analytics_product_sub_area": "Hide Watermark"
+      }
+    },
+    {
       "variable": "welcome_text",
       "label": "Welcome text",
       "section": "homepage",
