chore: slight tweak on shop messaging and announcement settings

--- a/source/settings.json
+++ b/source/settings.json
@@ -935,7 +935,7 @@
     },
     {
       "variable": "announcement_message_text",
-      "label": "Announcement text",
+      "label": "Announcement banner",
       "section": "messaging",
       "max_length": 500,
       "type": "textarea",
@@ -943,7 +943,7 @@
     },
     {
       "variable": "contact_text",
-      "label": "Contact page text",
+      "label": "Contact page",
       "section": "messaging",
       "type": "textarea",
       "max_length": 1024,
@@ -951,7 +951,7 @@
     },
     {
       "variable": "cart_text",
-      "label": "Cart page text",
+      "label": "Cart page",
       "section": "messaging",
       "max_length": 1024,
       "type": "textarea",
