chore: move 3 settings into products area

--- a/source/settings.json
+++ b/source/settings.json
@@ -685,6 +685,35 @@
       ]
     },
     {
+      "variable": "money_format",
+      "label": "Price display",
+      "section": "product_page",
+      "type": "select",
+      "options": [
+        ["Currency sign", "sign"],
+        ["Currency code", "code"],
+        ["No currency indicator", "none"]
+      ],
+      "default": "sign",
+      "description": "Sets how prices appear in your shop"
+    },
+    {
+      "variable": "show_sold_out_product_prices",
+      "label": "Show prices for sold out products",
+      "section": "product_page",
+      "type": "boolean",
+      "default": true,
+      "description": "Show the price of sold out products on product grids and product pages"
+    },
+    {
+      "variable": "show_coming_soon_product_prices",
+      "label": "Show prices for coming soon products",
+      "section": "product_page",
+      "type": "boolean",
+      "default": true,
+      "description": "Show the price of coming soon products on product grids and product pages"
+    },
+    {
       "variable": "show_related_products",
       "label": "Show related products",
       "section": "product_page",
@@ -846,35 +875,6 @@
       "section": "general",
       "type": "text",
       "description": "Create a custom page for your lookbook, then enter the page name in this field"
-    },
-    {
-      "variable": "show_sold_out_product_prices",
-      "label": "Show prices for sold out products",
-      "section": "general",
-      "type": "boolean",
-      "default": true,
-      "description": "Show the price of sold out products on product grids and product pages"
-    },
-    {
-      "variable": "show_coming_soon_product_prices",
-      "label": "Show prices for coming soon products",
-      "section": "general",
-      "type": "boolean",
-      "default": true,
-      "description": "Show the price of coming soon products on product grids and product pages"
-    },
-    {
-      "variable": "money_format",
-      "label": "Price display",
-      "section": "general",
-      "type": "select",
-      "options": [
-        ["Currency sign", "sign"],
-        ["Currency code", "code"],
-        ["No currency indicator", "none"]
-      ],
-      "default": "sign",
-      "description": "Sets how prices appear in your shop"
     },
     {
       "variable": "border_radius",
