--- a/source/settings.json
+++ b/source/settings.json
@@ -693,6 +693,18 @@
       "description": "Displays a welcome message on the Home page"
     },
     {
+      "variable": "homepage_slideshow_transition",
+      "label": "Slideshow type",
+      "section": "homepage",
+      "type": "select",
+      "options": [
+        ["Slide", "slide"],
+        ["Fade", "fade"]
+      ],
+      "default": "slide",
+      "description": "Controls how homepage slideshow transitions between images"
+    },
+    {
       "variable": "homepage_slideshow_autoplay",
       "label": "Auto-play homepage slideshow",
       "section": "homepage",
