fix: add nav_items_footer setting dependency on nav_page_display_footer

--- a/source/settings.json
+++ b/source/settings.json
@@ -558,7 +558,11 @@
       "type": "select",
       "options": "0..100",
       "default": 100,
-      "description": "Maximum number of custom pages shown in your footer and mobile header menu"
+      "description": "Maximum number of custom pages shown in your footer and mobile header menu",
+      "requires": [
+        "nav_page_display_footer neq contact_only",
+        "nav_page_display_footer neq none"
+      ]
     },
     {
       "variable": "nav_text_transform_header",
