fix: text transform setting clarification

--- a/source/settings.json
+++ b/source/settings.json
@@ -570,7 +570,7 @@
       "section": "global_navigation",
       "type": "select",
       "options": [
-        ["Default", "initial"],
+        ["Default (Sentence case)", "initial"],
         ["Uppercase", "uppercase"],
         ["Lowercase", "lowercase"]
       ],
@@ -583,7 +583,7 @@
       "section": "global_navigation",
       "type": "select",
       "options": [
-        ["Default", "initial"],
+        ["Default (Sentence case)", "initial"],
         ["Uppercase", "uppercase"],
         ["Lowercase", "lowercase"]
       ],
