--- a/source/settings.json
+++ b/source/settings.json
@@ -588,7 +588,7 @@
         ["Lowercase", "lowercase"]
       ],
       "default": "initial",
-      "description": "Controls the text case styling in your footer"
+      "description": "Controls the text case styling in the footer, excluding custom footer text"
     },
     {
       "variable": "show_search",
