Fix logo image scaling and improve image quality
- Rename logo_image_height setting to logo_image_size for clarity
- Update CSS from max-height to height to enable proper scaling
- Implement width constraints in template for optimized DPI rendering
- Add retina display support with proper srcset configuration

--- a/source/settings.json
+++ b/source/settings.json
@@ -495,7 +495,7 @@
   ],
   "options": [
     {
-      "variable": "logo_image_height",
+      "variable": "logo_image_size",
       "label": "Logo image size",
       "section": "global_navigation",
       "type": "select",
@@ -508,7 +508,7 @@
         ["XX Large", "300"]
       ],
       "default": "100",
-      "description": "Controls the maximum size of your logo"
+      "description": "Controls the size of your logo"
     },
     {
       "variable": "nav_page_display",
