--- a/source/settings.json
+++ b/source/settings.json
@@ -27,6 +27,12 @@
       "label": "Lookbook images",
       "section": "general",
       "description": "Adds a gallery to the specified Lookbook page"
+    },
+    {
+      "variable": "maintenance_image",
+      "label": "Maintenance Image",
+      "section": "messaging",
+      "description": "Adds an image to your Maintenance page. Recommend using an image at least 600px wide."
     }
   ],
   "preset_styles": {
@@ -1022,6 +1028,23 @@
       "description": "Controls the rounded corner style on images and other site elements"
     },
     {
+      "variable": "maintenance_message",
+      "label": "Maintenance mode message",
+      "section": "messaging",
+      "type": "textarea",
+      "max_length": 2048,
+      "description": "A message visitors see when your shop is in Maintenance Mode. Supports HTML for advanced customization.",
+      "default": "We’re getting things ready. Check back soon!"
+    },
+    {
+      "variable": "show_shop_name_on_maintenance_page",
+      "label": "Show shop name on Maintenance Mode page",
+      "section": "messaging",
+      "type": "boolean",
+      "default": true,
+      "description": "Display your shop name on the Maintenance Mode page. Turn this off if your maintenance image already includes your shop name to avoid duplication."
+    },
+    {
       "variable": "announcement_message_text",
       "label": "Announcement banner",
       "section": "messaging",
@@ -1052,15 +1075,6 @@
       "max_length": 1024,
       "type": "textarea",
       "description": "Displays a message at the top your cart page when there are items in the cart. Supports HTML for advanced customization."
-    },
-    {
-      "variable": "maintenance_message",
-      "label": "Maintenance mode message",
-      "section": "messaging",
-      "type": "textarea",
-      "max_length": 2048,
-      "description": "A message visitors see when your shop is in Maintenance Mode. Supports HTML for advanced customization.",
-      "default": "We’re getting things ready. Check back soon!"
     },
     {
       "variable": "translation_locale",
