--- a/source/settings.json
+++ b/source/settings.json
@@ -1100,7 +1100,7 @@
     },
     {
       "variable": "header_text_scale",
-      "label": "Header navigation text size",
+      "label": "Header and sidebar text size",
       "section": "text_sizing",
       "type": "select",
       "options": [
